chore: Rebrand as personal side project

--- a/template.html
+++ b/template.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Deliverability Guide by FirstQuadrant</title>
+    <title>Deliverability Guide</title>
     <meta
       name="description"
-      content="Never end in spam with the world's most comprehensive email deliverability checklist, brought to you by your friends at FirstQuadrant."
+      content="Never end in spam with the world's most comprehensive email deliverability checklist, including DNS records, warming, content, tracking, and metrics."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="canonical" href="https://deliverabilityguide.com" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📧</text></svg>"
+    />
     <style>
       @media (prefers-reduced-motion: no-preference) {
         html {
@@ -52,7 +56,7 @@
         margin: 6rem auto 0;
         text-align: center;
         font-size: 0.8rem;
-        max-width: 30rem;
+        max-width: 32rem;
         color: #666;
       }
       footer a {
@@ -122,7 +126,6 @@
       <div aria-hidden="true" class="icon">📧</div>
       <p>The open source email</p>
       <h1>Deliverability Guide</h1>
-      <p>by FirstQuadrant</p>
     </header>
     <main>
       <!-- content -->
@@ -131,18 +134,17 @@
       <p>
         This work is licensed under a
         <a
-          href="https://github.com/firstquadrant-ai/deliverabilityguide.com/blob/main/LICENSE"
+          href="https://github.com/AnandChowdhary/deliverabilityguide.com/blob/main/LICENSE"
           >Creative Commons Attribution Share Alike 4.0 International</a
         >
-        by <a href="https://anandchowdhary.com">Anand Chowdhary</a> and
-        <a href="https://firstquadrant.ai">FirstQuadrant</a>.
+        by <a href="https://anandchowdhary.com">Anand Chowdhary</a>.
       </p>
       <p>
         This page is open source on
-        <a href="https://github.com/firstquadrant-ai/deliverabilityguide.com"
+        <a href="https://github.com/AnandChowdhary/deliverabilityguide.com"
           >GitHub</a
         >
-        as a living document. Make a contribution!
+        as a living document. Contributions welcome!
       </p>
     </footer>
   </body>
